--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dev_dependencies:
   image_picker: ^0.8.4+4
   hive: ^2.0.4
   hive_flutter: ^1.1.0
+  flip_card: ^0.5.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -67,6 +68,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/images/avatar_no.png
+      - assets/images/circle.png
+      - assets/images/heart.png
+      - assets/images/hidden.png
+      - assets/images/star.png
+      - assets/images/triangle.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
