--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flip_card: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +46,6 @@ dev_dependencies:
   image_picker: ^0.8.4+4
   hive: ^2.0.4
   hive_flutter: ^1.1.0
-  flip_card: ^0.5.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -67,12 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/images/avatar_no.png
-      - assets/images/circle.png
-      - assets/images/heart.png
-      - assets/images/hidden.png
-      - assets/images/star.png
-      - assets/images/triangle.png
+      - assets/animalspics/.
+      - assets/images/.
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
